# torrent-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install-dependencies.sh
src/: AnnounceResponseDeserializer.h  AnnounceResponseDeserializerImpl.cpp  AnnounceResponseDeserializerImplTest.cpp  AnnounceResponseDeserializerMock.h  Bitfield.cpp  Bitfield.h  BitfieldTest.cpp  CMakeLists.txt  CommandLineArgumentParser.cpp  CommandLineArgumentParser.h  CommandLineArguments.h  CprHttpClient.cpp  CprHttpClient.h  FileSystemService.cpp  FileSystemService.h  FileSystemServiceImpl.h  FileSystemServiceMock.h  GetExecutablePath.cpp  GetExecutablePath.h  GetExecutablePathTest.cpp  GetProjectPath.cpp  GetProjectPath.h  GetProjectPathTest.cpp  HandshakeMessage.h  HandshakeMessageSerializer.cpp  HandshakeMessageSerializerTest.cpp  HexEncoder.cpp  HexEncoder.h  HttpClient.h  HttpClientMock.h  HttpGetRequestPayload.h  HttpResponse.h  HttpStatusCode.h  Main.cpp  Message.h  MessageSerializer.cpp  MessageSerializer.h  MessageSerializerTest.cpp  MessageType.h  PeerConnector.cpp  (+33 more)
src/common/: CMakeLists.txt
src/common/bytes/: CMakeLists.txt
src/common/bytes/include/bytes/: Bitfield.h  BytesConverter.h
src/common/bytes/src/: Bitfield.cpp  BitfieldTest.cpp  BytesConverter.cpp  BytesConverterTest.cpp
src/common/collection/include/collection/: StringHelper.h  ThreadSafeQueue.h
src/common/collection/src/: StringHelper.cpp  ThreadSafeQueueTest.cpp
src/common/encoder/: CMakeLists.txt
src/common/encoder/include/encoder/: HexEncoder.h
src/common/encoder/src/: HexEncoder.cpp  HexEncoderTest.cpp
src/common/fileSystem/: CMakeLists.txt
src/common/fileSystem/include/fileSystem/: FileSystemService.h  FileSystemServiceFactory.h  FileSystemServiceMock.h  GetExecutablePath.h  GetProjectPath.h
src/common/fileSystem/src/: FileSystemServiceFactory.cpp  FileSystemServiceImpl.cpp  FileSystemServiceImpl.h  GetExecutablePath.cpp  GetExecutablePathTest.cpp  GetProjectPath.cpp  GetProjectPathTest.cpp
src/common/httpClient/: CMakeLists.txt
src/common/httpClient/src/: HttpClientImpl.h
src/core/: CMakeLists.txt
src/core/include/: TorrentClient.h  TorrentClientFactory.h
src/core/src/: BencodeHelper.h  HexEncoder.cpp  HexEncoder.h  PeerEndpoint.h
src/core/src/client/: PeerIdGenerator.cpp  PeerIdGenerator.h  TorrentClient.cpp  TorrentClientFactory.cpp  TorrentClientImpl.cpp  TorrentClientImpl.h
src/core/src/errors/: InvalidBencodeFileFormatError.h  MissingTorrentInfo.h
src/core/src/session/: Bitfield.cpp  Bitfield.h  BitfieldTest.cpp  FilePieceInfo.h  HandshakeMessage.h  HandshakeMessageSerializer.cpp  HandshakeMessageSerializer.h  HandshakeMessageSerializerTest.cpp  HashValidator.cpp  HashValidator.h  HashValidatorTest.cpp  Message.h  MessageId.h  MessageSerializer.cpp  MessageSerializer.h  MessageSerializerTest.cpp  PeerToPeerSession.h  PeerToPeerSessionImpl.cpp  PeerToPeerSessionImpl.h  PeerToPeerSessionManager.cpp  PeerToPeerSessionManager.h  PieceQueueManager.cpp  PieceQueueManager.h  PieceRepository.h  PieceRepositoryImpl.cpp  PieceRepositoryImpl.h  PieceRepositoryImplMultiFileTest.cpp  PieceRepositoryImplSingleFileTest.cpp  PieceRepositoryImplTest.cpp  PiecesSerializer.h  PiecesSerializerImpl.cpp  PiecesSerializerImpl.h  PiecesSerializerImplTest.cpp  PiecesSerializerMock.h
src/core/src/session/errors/: InvalidJsonError.h  MessageIdMappingNotFoundError.h  PeerConnectionError.h
src/core/src/torrentFile/: NestedFileInfo.h  TorrentFileDeserializer.h  TorrentFileDeserializerImpl.cpp  TorrentFileDeserializerImpl.h  TorrentFileDeserializerImplTest.cpp  TorrentFileInfo.h
src/core/src/torrentFile/errors/: InvalidBencodeFileFormatError.h  MissingBencodeFieldValue.h
src/core/src/torrentFile/testFiles/: fileWithoutAnnounceField.torrent  fileWithoutNameField.torrent  fileWithoutPieceLengthField.torrent  invalidBencodeFile.torrent  valid.torrent  validAnnounceResponse.txt
src/core/src/tracker/: AnnounceResponseDeserializer.h  AnnounceResponseDeserializerImpl.cpp  AnnounceResponseDeserializerImpl.h  AnnounceResponseDeserializerImplTest.cpp  AnnounceResponseDeserializerMock.h  FormatUdpAnnounceRequestPayload.h  PeerEndpoint.h  PeersRetriever.h  PeersRetrieverImpl.cpp  PeersRetrieverImpl.h  PeersRetrieverImplTest.cpp  PeersRetrieverMock.h  RetrievePeersPayload.h  RetrievePeersResponse.h
src/core/src/tracker/errors/: InvalidBencodeFormatError.h  MissingBencodeDictionary.h
src/errors/: BencodeParseError.h  FileNotFound.h  MessageIdMappingNotFoundError.h  MessageTypeNotFoundError.h  MissingTorrentInfo.h
src/libs/: CMakeLists.txt
src/libs/bytes/include/bytes/: Bitfield.h  BytesConverter.h
src/libs/bytes/src/: Bitfield.cpp  BitfieldTest.cpp  BytesConverter.cpp  BytesConverterTest.cpp
src/libs/collection/: CMakeLists.txt
src/libs/collection/include/collection/: StringHelper.h  ThreadSafeQueue.h
src/libs/collection/src/: StringHelper.cpp  StringHelperTest.cpp  ThreadSafeQueueTest.cpp
src/libs/encoder/include/encoder/: HexEncoder.h
src/libs/encoder/src/: HexEncoder.cpp  HexEncoderTest.cpp
src/libs/fileSystem/: CMakeLists.txt
src/libs/fileSystem/include/fileSystem/: FileSystemService.h  FileSystemServiceFactory.h  FileSystemServiceMock.h  GetExecutablePath.h  GetProjectPath.h
src/libs/fileSystem/src/: FileSystemServiceFactory.cpp  FileSystemServiceImpl.cpp  FileSystemServiceImpl.h  FileSystemServiceImplTest.cpp  GetExecutablePath.cpp  GetExecutablePathTest.cpp  GetProjectPath.cpp  GetProjectPathTest.cpp
src/libs/httpClient/: CMakeLists.txt
src/libs/httpClient/include/httpClient/: HttpClient.h  HttpClientFactory.h  HttpClientMock.h  HttpGetRequestPayload.h  HttpResponse.h  HttpStatusCode.h
src/libs/httpClient/src/: HttpClientFactory.cpp  HttpClientImpl.cpp  HttpClientImpl.h
src/libs/random/: CMakeLists.txt
src/libs/random/include/random/: RandomGenerator.h
src/libs/random/src/: RandomGenerator.cpp
src/testFiles/: fileWithoutInfoField.torrent  fileWithoutLengthField.torrent  fileWithoutPiecesField.torrent
torrents/: sopranos.torrent
(+2 files in other folders)
